# bb-remote-execution

./: BUILD.bazel  WORKSPACE
cmd/bb_runner/: BUILD.bazel
cmd/bb_scheduler/: BUILD.bazel  main.go
cmd/bb_worker/: BUILD.bazel  main.go
pkg/blobstore/: BUILD.bazel
pkg/builder/: BUILD.bazel  worker_build_queue.go
pkg/environment/: BUILD.bazel
