load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/buildbarn/bb-remote-execution
gazelle(
    name = "gazelle",
)

load("@io_bazel_rules_go//go:def.bzl", "go_path")

# build this to get the gopath directory that can be used by standard Go tools
# Referenced in vscode project config .vscode/settings.json
go_path(
    name = "gopath",
    testonly = True,  # so we can depend on test targets
    deps = [
               "%s:go_default_library" % (pkg)
               for pkg in ["//pkg/%s" % (dir) for dir in [
                   "builder",
                   "blobstore",
                   "cas",
                   "environment",
               ] + ["configuration/bb_%s"%(program) for program in [
                   "runner", "scheduler", "worker"]]
                 + ["proto/%s"%(proto) for proto in [
                   "runner", "scheduler", "configuration/bb_runner", "configuration/bb_scheduler", "configuration/bb_worker"]]
               ]
           ] +
           [
               "%s:go_default_test" % (pkg)
               for pkg in ["//pkg/%s" % (dir) for dir in [
                   "environment", "builder", "blobstore"
               ]]
           ] +
    ["//cmd/bb_%s:go_default_library"%(cmd) for cmd in ["runner", "worker", "scheduler"]
    ],
)
